src/commands/top/snapshots/zizq__commands__top__ui__tests__render_ready_tab_narrow.snap
---
source: src/commands/top/ui.rs
assertion_line: 1324
expression: "render_to_string(&app, 80, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 2 in-flight, 2 ready, 2 scheduled
          ▼
  Depth[││││││                                                         6 jobs]
          ▲
   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE                 DELAY   ATTEMPTS TY
70a3cc87a1f0890da08e8b3cc86          0 default                  5s          0 ge
70a3dd47c2308a1fb09e9c4dd97          5 default                1m2s          2 se
 Tab Change Tab  i Info  p Pause  D Delete  q Quit
